[package]
name = "hitze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
libc = "0.2.146"

[[bench]]
name = "benchmark"
harness = false
