[package]
name = "hitze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
libc = "0.2.146"

[dev-dependencies]
iai = "0.1"

[[bench]]
name = "benchmark"
harness = false
